[portal] corrected alignement with buttons tooltips

--- a/portal/src/main/resources/assets/themes/panda/css/modules.less
+++ b/portal/src/main/resources/assets/themes/panda/css/modules.less
@@ -1210,6 +1210,7 @@ nav.scrapbook-buttons{
 		margin-left: 4px;
 		margin-right: 4px;
 		font-family: Arial;
+		padding: 0;
 	}
 	input:hover{
 		opacity: 1;
